preparing user score

--- a/Quiz-App/app/src/main/res/values/themes.xml
+++ b/Quiz-App/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.QuizApp" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
@@ -21,6 +21,15 @@
     </style>
 
     <style name="SignUpTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/purpleVariant</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryContainer">@color/blue_50</item>
+        <item name="colorOnPrimaryContainer">@color/blue_black_3_3</item>
+
+        <item name="android:statusBarColor">@color/purpleVariant</item>
+    </style>
+
+    <style name="ResultTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/purpleVariant</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorPrimaryContainer">@color/blue_50</item>
