--- a/Quiz-App/app/src/main/res/layout/activity_quiz.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_quiz.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:background="@drawable/quiz_activity_shape"
-        tools:context=".QuizActivity">
+        tools:context=".logic.QuizActivity">
 
         <LinearLayout
             android:id="@+id/linearLayoutInfo"
@@ -189,7 +189,7 @@
             android:layout_height="65dp"
             android:layout_marginBottom="24dp"
             android:backgroundTint="#3D5AFE"
-            android:text="NEXT"
+            android:text="NEXT "
             android:textSize="16sp"
             app:cornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
