--- a/Quiz-App/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="50dp"
-        tools:context=".authentication.ForgotPasswordActivity">
+        tools:context=".auth.ForgotPasswordActivity">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationView"
