--- a/Quiz-App/app/src/main/res/layout/activity_login.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context=".authentication.loginActivity">
+    tools:context=".auth.loginActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
