update on category ImageView

--- a/Quiz-App/app/src/main/res/layout/activity_quiz.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_quiz.xml
@@ -174,7 +174,7 @@
             android:layout_width="150dp"
             android:layout_height="65dp"
             android:layout_marginBottom="24dp"
-            android:backgroundTint="#3D5AFE"
+            android:backgroundTint="@color/purpleVariant"
             android:text="FINISH"
             android:textSize="16sp"
             app:cornerRadius="15dp"
@@ -188,7 +188,7 @@
             android:layout_width="150dp"
             android:layout_height="65dp"
             android:layout_marginBottom="24dp"
-            android:backgroundTint="#3D5AFE"
+            android:backgroundTint="@color/purpleVariant"
             android:text="NEXT "
             android:textSize="16sp"
             app:cornerRadius="15dp"
