--- a/Quiz-App/app/src/main/res/layout/activity_main.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,21 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="90dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
         android:elevation="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/startQuiz"
         app:layout_constraintEnd_toEndOf="@+id/startQuiz"
+        app:layout_constraintWidth_percent="0.25"
         app:srcCompat="@drawable/laptop" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="36dp"
         android:elevation="5dp"
         android:text="Let's Play Quizzes"
@@ -39,7 +40,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="choose your category"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -48,12 +49,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/startQuiz"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/login_signin_button_shape"
+        android:background="@drawable/result_box_shape"
         android:elevation="5dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Computer Science"
+            android:text="Programming"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -88,6 +91,7 @@
             android:id="@+id/textViewDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             android:text="Level : Intermediate"
             android:textColor="@color/white"
@@ -116,6 +120,7 @@
         android:background="@drawable/login_signin_button_shape"
         android:text="SIgn out"
         android:textColor="@color/white"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -127,6 +132,7 @@
         android:layout_marginBottom="16dp"
         android:text="TextView"
         android:textColor="@color/grey_600"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/signOutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
