package name change

--- a/Quiz-App/app/src/main/res/layout/activity_main.xml
+++ b/Quiz-App/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="choose your category"
+        android:text="Choose your category"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
